# RobotBar_PID_tutorial

./: README.md
pid_scope/: CMakeLists.txt  package.xml  setup.py
pid_scope/launch/: app.launch
pid_scope/msg/: Sensor.msg
pid_scope/src/pid_scope/: __init__.py  controller.py  fifo.py  model_manage.py  pid.py  scope.py  tk_window.py
robotbar_pid_flight_altitude/: CMakeLists.txt  package.xml
robotbar_pid_flight_altitude/config/: control.yaml
robotbar_pid_flight_altitude/docs/: setting.yaml
robotbar_pid_flight_altitude/launch/: display.launch  gazebo_test.launch  model_spawn.launch
robotbar_pid_flight_altitude/meshes/: base_link.STL  board_link.STL  height_sensor_link.STL  motor_link.STL  target_link.STL
robotbar_pid_flight_altitude/scripts/: model.py  pid.py
robotbar_pid_flight_altitude/urdf/: robotbar_pid_flight_altitude.csv  robotbar_pid_flight_altitude.urdf
robotbar_pid_seesaw/: CMakeLists.txt  package.xml
robotbar_pid_seesaw/config/: control.yaml
robotbar_pid_seesaw/docs/: setting.yaml
robotbar_pid_seesaw/launch/: display.launch  gazebo.launch  model_spawn.launch
robotbar_pid_seesaw/meshes/: ball_link.STL  base_link.STL  motor_link.STL  seesaw_Link.STL  sensor_link.STL  shaft_link.STL
robotbar_pid_seesaw/scripts/: model.py
robotbar_pid_seesaw/urdf/: ball.urdf  robotbar_pid_seesaw.csv  robotbar_pid_seesaw.urdf
